--- a/main.css
+++ b/main.css
@@ -4,19 +4,20 @@
     margin: 0;
 }
 
-.here {
+body {
+    /* display: flex;
+    margin-left: 5px; */
+ }
+.background-img {
     width: 100%;
-    height: 400px;
-    background-image: url("https://tinyurl.com/y5n39s3u");
+    height: 300px;
+    background-image: url("https://tinyurl.com/y3nqv9mj");
     background-size: cover;
     border: 1px solid black;
-
+    opacity: 0.9;
 }
 
-body {
-   /* display: flex;
-   margin-left: 5px; */
-}
+
 
 main {
     /* flex-direction: column;
@@ -24,14 +25,47 @@ main {
     align-items: center;  */
 }
 
-.hero {
-
+h1, h3, p {
+    color: white;
+    display: flex;
+    flex-direction: center;
+    justify-content: center;
+    align-content: center;
+    line-height: 50px;
 }
 
-nav {
+h1 {
+    margin-top: 80px;
+    line-height: 24px;
+    font-family: 'Playball', cursive;
+    font-size: 65px;
+    font-weight: lighter;
+}
+
+.hero {
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    flex-direction: center;
+    align-content: center;
+}
+
+.zeeQuote {
+    font-size: 14px;
+    font-weight: lighter;
+    font-style: italic;
+    font-size: 20px;
+}
+
+p {
+    line-height: 24px;
+}
+
+.nav-link, a {
    display: flex;
-   justify-content: space-between;
-   align-items: center;
+   justify-content: space-evenly;
+   font-size: 20px;
+   text-decoration: none;
+   
 }
 
 ul, nav-link {
