--- a/main.css
+++ b/main.css
@@ -5,84 +5,69 @@
 }
 
 body {
-    /* display: flex;
-    margin-left: 5px; */
+   display: flex;
+   padding: 20px;
+   border-style: ridge;
+   margin: 10px 10px 10px 10px;
+
  }
-.background-img {
-    position: static;
-    width: 100%;
-    height: 300px;
-    background-image: url("https://tinyurl.com/y3nqv9mj");
-    background-size: cover;
-    border: 1px solid black;
-    opacity: 0.9;
-}
 
-main {
-    /* flex-direction: column;
+ .hero h1 {
+     display: flex;
+     flex-direction: row;
+     justify-content: center;
+     text-align: center;
+     margin: auto;
+     margin-top: 20px;
+     font-family: 'Playball', cursive;
+     font-size: 70px;
+ }
+
+ h3 {
+     font-family: 'Poppins', sans-serif;
+     margin-bottom: 10px;
+     padding: 10px;
+ }
+
+.bannerHeading {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;  */
-}
-
-.hero {
-    position: static;
+    text-align: center;
+    line-height: 2.0;
     font-family: 'Poppins', sans-serif;
-    display: flex;
-    flex-direction: center;
-    align-content: center;
+    font-weight: bolder;
+    border-bottom-style: ridge;
 }
-
-h1, h3{
-    color: white;
-    display: flex;
-    flex-direction: center;
-    justify-content: center;
-    align-content: center;
-    line-height: 50px;
-}
-
-h1 {
-    margin-top: 80px;
-    line-height: 24px;
-    font-family: 'Playball', cursive;
-    font-size: 65px;
-    font-weight: lighter;
-}
-
-
 
 .zeeQuote {
     font-size: 14px;
-    font-weight: lighter;
     font-style: italic;
-    font-size: 20px;
-    position: static;
-    color: white;
-    padding: 10px;
-    margin-left: 10%;  
-    display: flex;
-    flex-direction: column; 
-    align-content: center;
 }
 
 .nav-link, a {
    display: flex;
    justify-content: space-evenly;
-   font-size: 16px;
+   font-size: 20px;
    text-decoration: none;
+   padding: 10px;
+   font-family: 'Playball', cursive;
+   color: black;
+   font-weight: lighter;
+   list-style-type: none; 
 }
 
-.nav-link-:hover {
-    color: blue;
-    transform: scale(1.5);
-}
-
-ul, nav-link {
+/* 
+.nav-link {
     list-style-type: none;
     margin: 0;
-    padding: 20px;
+    padding: 30px;
     font-family: 'Poppins', sans-serif;
-}
+    color: black;
+    font-weight: bold;
+    border-bottom-style: groove;
+
+} */
 
 li {
     float: left;
@@ -102,15 +87,20 @@ li {
     justify-content: center;
     border: 1px solid black;
     background-color: #faf3dd;
-    padding: 30px 20px 20px 30px;
-    margin: 30px 20px 20px 20px;
-    height: 300px;
+    padding: 30px 30px 30px 30px;
+    margin: 60px 20px 20px 20px;
+    height: 200px;
     line-height: 1.6;
     font-family: 'Playball', cursive;
     font-weight: lighter;
+    margin-bottom: 80px;
+    border-radius: 10%
 
 }
-
+#about {
+    border-top-style: groove;
+    padding: 30px;
+}
 img {
     width: 100px;
 }
