--- a/main.css
+++ b/main.css
@@ -124,13 +124,13 @@ img {
     line-height: 1.6;
     font-family: 'Poppins', sans-serif;
     font-size: 14px;
-    border-bottom-style: groove;
+    /* border-bottom-style: groove; */
     border-top-style: groove;
 }
 
 #contact {
     padding: 20px;  
-   
+    border-top-style: groove;
 }
 
 .contact li {
@@ -144,20 +144,36 @@ img {
     list-style: none;
 }
 #home {
-    display: flex;
-    flex-direction: row;
-    align-content: flex end;
-    align-items: flex-end;
-    float: right;
+    /* display: flex; */
+    /* flex-direction: row;
+    align-content: flex end; */
+    /* align-items: flex-end; */
     font-family: 'Playball', cursive;
     font-size: 14px;
-    border-radius: 100%;
     padding: 10px;
     margin-bottom: 10px;
+    border-radius: 50%;
 }
 
 #contact img {
     display: flex;
     flex-direction: column;
     width: 35px;
+}
+
+.project li {
+    list-style: none;
+    line-height: 1.6;
+}
+
+h4 {
+    line-height: 1.6;
+    text-decoration: underline;
+    font-family: 'Playball', cursive;
+    font-weight: lighter;
+    font-size: 20px;
+}
+
+.zee-quizapp {
+   margin-top: 20px;
 }
