--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ nav {
 
 .nav-link, a {
    display: flex;
-   flex-direction: column;
+   flex-direction: row;
    justify-content: space-evenly;
    font-size: 16px;
    text-decoration: none;
@@ -71,9 +71,8 @@ nav {
 
 .quote-Author {
     display: flex;
-    flex-direction: column;
-    /* justify-content: flex-end; */
-    /* align-items: flex-end; */
+    justify-content: flex-end;
+    align-items: flex-end;
     text-align: center;
     line-height: 1.6;
     font-family: 'Poppins', sans-serif;
@@ -88,45 +87,43 @@ nav {
     border: 1px solid black;
     background-color: #faf3dd;
     padding: 10px 10px 10px 10px;
-    /* margin: 60px 20px 20px 20px;
-    height: 200px; */
+    margin: 50px 10px 10px 10px;
+    height: 200px;
     line-height: 1.6;
     font-family: 'Playball', cursive;
     font-weight: lighter;
-    margin-bottom: 70px;
+    margin-bottom: 40px;
     border-radius: 10%;
 }
 
 #about {
     
-    padding: 10px;
+    padding: 20px;
     margin-bottom: 20px;
     border-top-style: groove;
    
 }
 
 h2 {
-    text-align: center;
     font-family: 'Playball', cursive;
     font-weight: lighter;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 img {
     width: 200px;
     margin-bottom: 20px;
-    display: flex;
-    align-content: center;
 }
 
-.zee-bio {
-    line-height: 1.6;
+.zee-bio p {
+    line-height: 1.7;
     font-family: 'Poppins', sans-serif;
-    font-size: 12px;
-    /* text-align: center; */
+    font-size: 14px;
+
 }
 
-.tab { margin-left: 10px; }
+/* .tab { margin-left: 10px; } */
 
 #projects {
     padding: 20px;
