--- a/main.css
+++ b/main.css
@@ -187,7 +187,7 @@ h4 {
 @media screen and (min-width: 700px) {
     body {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         padding: 30px;
         border-style: ridge;
         margin: 20px 20px 20px 20px;
@@ -218,7 +218,7 @@ h4 {
     #contact img {
         display: flex;
         flex-direction: row;
-        justify-content: space-evenly;
+        
         width: 23px;
             
         }
