--- a/main.css
+++ b/main.css
@@ -189,7 +189,7 @@ h4 {
 }
 
 .liveAppLink a {
-    display: flex;
+    /* display: flex; */
     /* justify-content: flex-start;
     margin-left: 10%; */
     font-size: 30px;
